# sovereign-rag-benchmark

./: .env.example  .gitignore  LICENSE  Notes.txt  README.md  docker-compose.yml  pyproject.toml
infrastructure/: vllm-gpu-deployment.bicep
scripts/: generate_sample_data.py  run_benchmark.py
src/api/: main.py
src/core/: config.py
src/engine/: ingest.py  rag_pipeline.py
src/schemas/: responses.py
tests/: test_api.py
