[project]
name = "sovereign-rag-benchmark"
version = "0.1.0"
description = "Air-gapped Document Intelligence using vLLM, pgvector, and LlamaIndex"
requires-python = ">=3.12"
dependencies = [
    # API Routing & Validation
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    
    # AI & Retrieval Engine
    "llama-index>=0.10.40",
    "llama-index-vector-stores-postgres>=0.1.4",
    "llama-index-embeddings-huggingface>=0.2.1",
    "llama-index-llms-openai-like>=0.1.3", 
    
    # Infrastructure Clients
    "psycopg2-binary>=2.9.9",
    "redis>=5.0.4",
    
    # Observability
    "langfuse>=2.31.0",
    "opentelemetry-api>=1.24.0",
    "opentelemetry-sdk>=1.24.0",
    "opentelemetry-instrumentation-fastapi>=0.45b0"
]

# Adding the Dev Tools you rightfully called out
[dependency-groups]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0"  # Required for FastAPI's TestClient
]

# Ruff Configuration
[tool.ruff]
line-length = 100
target-version = "py312"

# Mypy Configuration
[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true
# follow_imports = "silent"
exclude = [
    "^\\.venv/",
]

[tool.pytest.ini_options]
addopts = "-v --asyncio-mode=auto"
testpaths = ["tests"]